trunk/Archive2/ef/e876645a7cc97c/output
main.cpp: In function 'void f(int)':
main.cpp:10:25: error: assignment of read-only parameter 'i'
 void f(const int i) { i = 10; std::cout << i << '\n'; }
                         ^
